@@ -13,6 +13,8 @@ package require tcltest 2.2
 eval tcltest::configure $argv
 tcltest::loadTestedCommands
 
+namespace import -force ::tk::test:loadTkCommand
+
 proc sleep ms {
     global x
     after $ms {set x 1}
@@ -2394,14 +2396,16 @@ test unixWm-59.1 {exit processing} unix {
     list $error $msg
 } {0 {}}
 test unixWm-59.2 {exit processing} unix {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code  {
 	interp create x
 	x eval {set argc 2}
 	x eval {set argv "-geometry 10x10+0+0"}
 	x eval {load {} Tk}
 	update
 	exit
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -2411,7 +2415,8 @@ test unixWm-59.2 {exit processing} unix {
     list $error $msg
 } {0 {}}
 test unixWm-59.3 {exit processing} unix {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code  {
 	interp create x
 	x eval {set argc 2}
 	x eval {set argv "-geometry 10x10+0+0"}
@@ -2424,7 +2429,8 @@ test unixWm-59.3 {exit processing} unix {
 	proc destroy_x {} {interp delete x}
 	update
 	exit
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
