@@ -11,6 +11,7 @@ package require tcltest 2.1
 eval tcltest::configure $argv
 tcltest::loadTestedCommands
 
+namespace import -force ::tk::test::loadTkCommand
 update
 
 # XXX This file is woefully incomplete.  Right now it only tests
@@ -76,11 +77,13 @@ test window-2.3 {Tk_DestroyWindow procedure, destroy handler deletes parent} {
 
 test window-2.4 {Tk_DestroyWindow, cleanup half dead window at exit} \
         unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         update
         bind . <Destroy> exit
         destroy .
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -92,12 +95,14 @@ test window-2.4 {Tk_DestroyWindow, cleanup half dead window at exit} \
 
 test window-2.5 {Tk_DestroyWindow, cleanup half dead windows at exit} \
         unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         toplevel .t
         update
         bind .t <Destroy> exit
         destroy .t
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -109,12 +114,14 @@ test window-2.5 {Tk_DestroyWindow, cleanup half dead windows at exit} \
 
 test window-2.6 {Tk_DestroyWindow, cleanup half dead windows at exit} \
         unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         toplevel .t
         update
         bind .t <Destroy> exit
         destroy .
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -126,13 +133,15 @@ test window-2.6 {Tk_DestroyWindow, cleanup half dead windows at exit} \
 
 test window-2.7 {Tk_DestroyWindow, cleanup half dead windows at exit} \
         unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         toplevel .t
         toplevel .t.f
         update
         bind .t.f <Destroy> exit
         destroy .
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -144,7 +153,8 @@ test window-2.7 {Tk_DestroyWindow, cleanup half dead windows at exit} \
 
 test window-2.8 {Tk_DestroyWindow, cleanup half dead windows at exit} \
         unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         toplevel .t1
         toplevel .t2
         toplevel .t3
@@ -153,7 +163,8 @@ test window-2.8 {Tk_DestroyWindow, cleanup half dead windows at exit} \
         bind .t2 <Destroy> {destroy .t1}
         bind .t1 <Destroy> {exit 0}
         destroy .t3
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -165,14 +176,16 @@ test window-2.8 {Tk_DestroyWindow, cleanup half dead windows at exit} \
 
 test window-2.9 {Tk_DestroyWindow, Destroy bindings
         evaluated after exit} unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         toplevel .t1
         toplevel .t2
         update
         bind .t2 <Destroy> {puts "Destroy .t2" ; exit 1}
         bind .t1 <Destroy> {puts "Destroy .t1" ; exit 0}
         destroy .t2
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -185,7 +198,8 @@ Destroy .t1}}
 
 test window-2.10 {Tk_DestroyWindow, Destroy binding
         evaluated once} unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         update
         bind . <Destroy> {
             puts "Destroy ."
@@ -193,7 +207,8 @@ test window-2.10 {Tk_DestroyWindow, Destroy binding
             exit 0
         }
         destroy .
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
@@ -205,7 +220,8 @@ test window-2.10 {Tk_DestroyWindow, Destroy binding
 
 test window-2.11 {Tk_DestroyWindow, don't reanimate a half-dead window} \
         unixOrWin {
-    set script [makeFile {
+    set code [loadTkCommand]
+    append code {
         toplevel .t1
         toplevel .t2
         update
@@ -218,7 +234,8 @@ test window-2.11 {Tk_DestroyWindow, don't reanimate a half-dead window} \
         }
         bind .t2 <Destroy> {exit}
         destroy .t2
-    } script]
+    }
+    set script [makeFile $code script]
     if {[catch {exec [interpreter] $script -geometry 10x10+0+0} msg]} {
 	set error 1
     } else {
